--- a/flexjustify.css
+++ b/flexjustify.css
@@ -25,12 +25,11 @@
 .container{
     display: flex;
     min-height: 100vh;
+    flex-direction: row;
+    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-evenly;
-    justify-content: flex-start;
-    justify-content: center;
-    justify-content: space-around;
-    justify-content: space-between;
-    
-    
+}
+
+.box{
+    width: 33.3%;
 }
