--- a/style.css
+++ b/style.css
@@ -23,7 +23,24 @@
 .box10 { background:#18dcff;}
 
 .container{
-
     display: flex;  
+}
 
+.box1{
+    flex: 1;
+}
+
+.box2{
+    flex: 2;
+}
+
+.box3{
+    flex: 3;
+}
+.box4{
+    flex: 4;
+}
+
+.box5{
+    flex: 5;
 }
